--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,12 +4,12 @@ spring.application.name = security-springboot
 spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
-spring.datasource.url=jdbc:mysql://111.229.241.164:3306/cloud?useUnicode=true&character=utf-8&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=nuttertools
+spring.datasource.url=jdbc:mysql://localhost:3306/cloud?useUnicode=true&character=utf-8&useSSL=false
+spring.datasource.username=123
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#mybatis-plus≈‰÷√
+#mybatis-plus√Ö√§√ñ√É
 mybatis-plus.global-config.banner=true
 mybatis-plus.type-aliases-package=securityOAuth.entity
 mybatis-plus.mapper-locations=classpath:mapper/*.xml
